@@ -1,0 +1,3 @@
+
+Magnitude < #Character.
+
