@@ -1,0 +1,3 @@
+
+PositionableStream < #WriteStream.
+
